--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
+  <meta property=“og:image” content=“ce820221-f15b-4062-b0e0-fc38a2de75a0.jpeg ” /> 
   <title>Iframe</title>
   <script>
     window.addEventListener('message', (event) => {
