--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>openCDO</title>
 </head>
 <body>
   <h1>welcome</h1>
   <h3>we are we are an open source cyber security agency, completely opencourse and protection is our main goal</h3>
+  <a href='safe.js'>hi</a>
 </body>
 </html>
